# freertos-learning-project

./: CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: FindClangFormat.cmake
src/: main.cpp
src/drivers/led/: led.cpp  led.hpp
src/freertos/FreeRTOSConfig/: FreeRTOSConfig.h
src/freertos/tasks/blinky/: blinky_task.cpp  blinky_task.hpp
src/stm32f103rb/peripherals/: stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  system_stm32f1xx.c
src/stm32f103rb/peripherals/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
src/stm32f103rb/peripherals/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_timebase_rtc_alarm_template.c
